[tool.poetry]
name = "webhook-replay"
version = "0.1.0"
description = "Webhook replay service"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.100.0"
uvicorn = ">=0.22.0"
pydantic = ">=2.0"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
