[tool.poetry]
name = "webhook-service"
version = "0.1.0"
description = ""
authors = ["solalohana <solalohana@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.2,<0.35.0"}
pydantic = {extras = ["email"], version = ">=2.11.4,<3.0.0"}
python-dotenv = ">=1.1.0,<2.0.0"
pydantic-settings = ">=2.0"
alembic = ">=1.15.2,<2.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
sqlalchemy-utils = ">=0.41.2,<0.42.0"
passlib = {extras = ["bcrypt"], version = "==1.7.4"}
bcrypt = "==3.2.2"
httpx = "*"
boto3 = ">=1.38.18,<2.0.0"
moto = ">=5.1.4,<6.0.0"
python-jose = ">=3.4.0,<4.0.0"
python-multipart = ">=0.0.20,<0.0.21"
stripe = ">=12.1.0,<13.0.0"
celery = {extras = ["redis"], version = ">=5.3.6,<6.0.0"}
fastapi-limiter = {version = ">=0.1.6", extras = ["redis"]}
secure = "^1.0.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
